--- a/src/web/stylesheets/common/sass/components/_buttons.scss
+++ b/src/web/stylesheets/common/sass/components/_buttons.scss
@@ -2,6 +2,6 @@
 
 .btn[class*='btn-outline'] {
   &:not(:hover) {
-    color: gt.theme-var(gt.$text-color-2);
+    color: gt.theme-var(text-color-2);
   }
 }
