--- a/src/web/stylesheets/common/sass/components/_gradients.scss
+++ b/src/web/stylesheets/common/sass/components/_gradients.scss
@@ -5,8 +5,8 @@
   background:
     linear-gradient(
       90deg,
-      gt.theme-var(gt.$button-gradient-1-start) 0%,
-      gt.theme-var(gt.$button-gradient-1-end) 100%
+      gt.theme-var(button-gradient-1-start) 0%,
+      gt.theme-var(button-gradient-1-end) 100%
     );
 }
 
@@ -14,7 +14,7 @@
   background:
     linear-gradient(
       90deg,
-      gt.theme-var(gt.$button-gradient-2-start) 0%,
-      gt.theme-var(gt.$button-gradient-2-end) 100%
+      gt.theme-var(button-gradient-2-start) 0%,
+      gt.theme-var(button-gradient-2-end) 100%
     );
 }
