--- a/src/web/stylesheets/common/sass/components/_tabs.scss
+++ b/src/web/stylesheets/common/sass/components/_tabs.scss
@@ -2,7 +2,7 @@
 @use '../themes/_default' as gt;
 
 .nav-tabs {
-  border-bottom: 1px solid gt.theme-var(gt.$bg-2);
+  border-bottom: 1px solid gt.theme-var(bg-2);
 
   .nav-link {
     padding-left: 0;
@@ -12,7 +12,7 @@
 
   .nav-item {
     a {
-      color: gt.theme-var(gt.$text-color-4);
+      color: gt.theme-var(text-color-4);
       position: relative;
 
       &.active {
@@ -22,7 +22,7 @@
           bottom: 0;
           left: 0;
           right: 0;
-          background: gt.theme-var(gt.$text-color-5);
+          background: gt.theme-var(text-color-5);
           height: 3px;
         }
       }
