--- a/src/web/stylesheets/common/sass/importers/_bootstrap.scss
+++ b/src/web/stylesheets/common/sass/importers/_bootstrap.scss
@@ -15,7 +15,7 @@ $font-family-base: $font-family-sans-serif !default;
 
 // cards
 $card-border-width: 0 !default;
-$card-bg: theme-var($bg-2);
+$card-bg: theme-var(bg-2);
 
 // headings
 $headings-font-weight: 700 !default;
@@ -24,24 +24,24 @@ $headings-font-weight: 700 !default;
 $btn-border-radius: 50px !default;
 
 // inputs
-$input-color: theme-var($text-color-4);
-$input-bg: theme-var($bg-3);
-$input-group-addon-bg: theme-var($bg-3);
+$input-color: theme-var(text-color-4);
+$input-bg: theme-var(bg-3);
+$input-group-addon-bg: theme-var(bg-3);
 
 // carousel
-$carousel-indicator-active-bg: theme-var($text-color-5);
-$carousel-caption-color: theme-var($text-color-4);
+$carousel-indicator-active-bg: theme-var(text-color-5);
+$carousel-caption-color: theme-var(text-color-4);
 
 // modal
-$modal-content-bg: theme-var($bg-2);
+$modal-content-bg: theme-var(bg-2);
 
 // placeholder
-$input-placeholder-color: theme-var($text-color-9);
+$input-placeholder-color: theme-var(text-color-9);
 
 //dropdowns
-$dropdown-bg: theme-var($bg-2);
-$dropdown-link-hover-bg: theme-var($bg-1);
-$dropdown-link-hover-color: theme-var($text-color-2);
+$dropdown-bg: theme-var(bg-2);
+$dropdown-link-hover-bg: theme-var(bg-1);
+$dropdown-link-hover-color: theme-var(text-color-2);
 
 // nav
 // colors used directly since dark specific
@@ -49,7 +49,7 @@ $navbar-dark-color: #e8e8e8;
 $navbar-dark-hover-color: #fff;
 
 // tabs
-$nav-tabs-link-active-color: theme-var($text-color-2);
+$nav-tabs-link-active-color: theme-var(text-color-2);
 $nav-tabs-border-width: 0;
 
 // patch for bootstrap incompactability for css vars
