--- a/src/typography/_typography.scss
+++ b/src/typography/_typography.scss
@@ -1,4 +1,3 @@
-@use '../web/stylesheets/common/sass/base/mixins' as gm;
 @import './_typography.js';
 
 @font-face {
@@ -43,4 +42,20 @@
   font-display: swap;
 }
 
-@include gm.spread-typography-map($web-typography);
+@mixin spread-typography-map($map) {
+  @each $key,$value in $map {
+    .#{$key} {
+      @each $property, $property-value in $value {
+        @if $property == font-size {
+          #{$property}: #{$property-value}px;
+        }
+
+        @else {
+          #{$property}: #{$property-value};
+        }
+      }
+    };
+  }
+}
+
+@include spread-typography-map($web-typography);
