--- a/src/web/stylesheets/index/style.scss
+++ b/src/web/stylesheets/index/style.scss
@@ -1,2 +1,2 @@
-@use '../../../typography/_typography.scss';
+@use '../common/sass/base/_typography.scss';
 @use '../common/sass/importers/_bootstrap.scss';
